--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    
+    <h1 class="titulo">Mis hobbies son:</h1>
+    <div class="wrapper">
+        <div class="card">
+            <img src="../IMGS/musica.jpg" alt="musica" class="card-img">
+            <h2 class="card-titulo">Escuchar música.</h2>
+        </div>
+        <div class="card">
+            <img src="../IMGS/volei.jpg" alt="voleibol" class="card-img">
+            <h2 class="card-titulo">Jugar voleibol.</h2>
+        </div>
+        <div class="card">
+            <img src="../IMGS/ayudar.jpg" alt="ayudar" class="card-img">
+            <h2 class="card-titulo">Ayudar a otros.</h2>
+        </div>
+        <div class="card">
+            <img src="../IMGS/pelis.jpg" alt="pelis" class="card-img">
+            <h2 class="card-titulo">Ver películas.</h2>
+        </div>
+        <div class="card">
+            <img src="../IMGS/socializar.jpg" alt="socializar" class="card-img">
+            <h2 class="card-titulo">Socializar con los demás.</h2>
+        </div>
+        <div class="card">
+            <img src="../IMGS/responsable.jpg" alt="responsable" class="card-img">
+            <h2 class="card-titulo">Ser responsable.</h2>
+        </div>
+    </div>
 </body>
 </html>
